--- a/TicTacToe/index.html
+++ b/TicTacToe/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Tic Tac Toe</title>
+  <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>🎮</text></svg>">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -26,7 +27,7 @@
       <div class="box bb-0 br-0"><span class="boxtext"></span></div>
     </div>
     <div class="gameinfo">
-      <h1>Welcom To Tic Tac Toe</h1>
+      <h1>Welcome To Tic Tac Toe</h1>
       <div>
         <span class="info">Turn For X</span>
        <button id="reset">Reset</button>
